Added Ajax to shopping cart, placed in sidebar.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,12 @@
 	</div>
 	<div id="columns">
 		<div id="side">
+			<% if @cart %>
+				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+					<%= render @cart %>
+				<% end %>
+			<% end %>
 			<ul>
-				<li><p><%= pluralize session[:counter], 'time' %></p></li>
 				<li><p><%= l @date_loaded, :format => :short %></p></li>
 				<li><a href="http://www....">Home</a></li>
 				<li><a href="http://www.../faq">Questions</a></li>
